# pmdmini-gui

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  FetchCatch2.cmake  FetchImGui.cmake  FetchJson.cmake  FetchPmdmini.cmake  FetchTinyFileDialogs.cmake
music_files/: ED00.M  ED01.M  ED02.M  EXED.M  EXED.M2  OP.M  OP.M2  ST00.M2  ST00B.M2  ST01B.M  ST02.M2  ST03.M  ST03B.M  ST03D.M2  ST05.M  ST05B.M  ST05B.M2  ST06.M  ST06B.M  STAFF.M2
music_files/Overnight_flight_in_Hatoyama/: th98_00.m
music_files/Th1_Highly_Resposive_to_Prayers/: R_00.M  R_00.M2  R_01.M  R_01.M2  R_02.M  R_02.M2  R_03.M  R_03.M2  R_04.M  R_04.M2  R_05.M  R_05.M2  R_06.M  R_06.M2  R_07.M  R_07.M2  R_08.M  R_08.M2  R_09.M  R_09.M2  R_10.M  R_10.M2  R_11.M  R_11.M2  R_12.M  R_12.M2  R_13.M  R_13.M2
music_files/Th1_Highly_Resposive_to_Prayers/MDT_stuff/: ALICE.MDT  INIT.MDT  IRIS.MDT  KAMI.MDT  KAMI2.MDT  LEGEND.MDT  POSITIVE.MDT  REIMU.MDT  ST1.MDT  ST2.MDT  ST3.MDT  ST4.MDT  ST5.MDT  ST6.MDT  SYUGEN.MDT  TENSI.MDT  ZIPANGU.MDT
music_files/Th2_the_Story_of_Eastern_Wonderland/PMD/: BOSS1.M  BOSS2.M  BOSS3.M  BOSS4.M  BOSS5.M  END1.M  ENDING.M  MIMA.M  OP.M  STAGE0.M  STAGE1.M  STAGE2.M  STAGE3.M  STAGE4.M  STAGE5.M
music_files/Th3_Phantasmagoria_of_Dim.Dream/: 00MM.M  01MM.M  02MM.M  03MM.M  04MM.M  05MM.M  06MM.M  07MM.M  08MM.M  DEC.M  DEMO1.M  DEMO2.M  DEMO3.M  DEMO4.M  DEMO5.M  ED.M  OP.M  OVER.M  SCORE.M  SELECT.M  WIN.M
music_files/Th4_Lotus_Land_Story/: END1.M26  END1.M86  END2.M26  END2.M86  NAME.M26  NAME.M86  OP.M26  OP.M86  ST00.M26  ST00.M86  ST00B.M26  ST00B.M86  ST01.M26  ST01.M86  ST01B.M26  ST01B.M86  ST02.M26  ST02.M86  ST02B.M26  ST02B.M86  ST03.M26  ST03.M86  ST03B.M26  ST03B.M86  ST03C.M26  ST03C.M86  ST04.M26  ST04.M86  ST04B.M26  ST04B.M86  ST05.M26  ST05.M86  ST05B.M26  ST05B.M86  ST06.M26  ST06.M86  ST06B.M26  ST06B.M86  ST06C.M26  ST06C.M86  (+4 more)
music_files/Th4_Lotus_Land_Story/trial/: ST02.M26  ST02.M86
music_files/Th5_Mystic_Square/: ED00.M2  ED01.M2  ED02.M2  NAME.M  NAME.M2  ST00.M  ST00B.M  ST01.M  ST01.M2  ST01B.M2  ST02.M  ST02B.M  ST02B.M2  ST03.M2  ST03B.M2  ST03C.M  ST03C.M2  ST03D.M  ST04.M  ST04.M2  ST04B.M  ST04B.M2  ST05.M2  ST06.M2  ST06B.M2  STAFF.M
music_files/Unused_tracks/th2 the Story of Eastern Wonderland remix song/: H_ST03.M  H_ST04.M  H_ST04B.M
music_files/Unused_tracks/th2 the Story of Eastern Wonderland unused song/: H_NG00.M  H_NG01.M  H_NG02.M
music_files/Unused_tracks/th3 Phantasmagoria of Dim.Dream unused song/: Y_NG00.M  Y_NG01.M  Y_NG02.M
music_files/Unused_tracks/th4 Lotus Land Story unused song/: G_NG00.M  G_NG00.M2  G_NG01.M  G_NG01.M2  G_NG02.M  G_NG02.M2  G_NG03.M  G_NG03.M2  G_NG04.M  G_NG04.M2  G_NG05.M  G_NG05.M2
resources/: app.rc  pmdmini-gui.desktop
src/: CMakeLists.txt  app.cpp  app.h  config.cpp  config.h  icon_data.h  logger.cpp  logger.h  main.cpp  player.cpp  player.h  playlist.cpp  playlist.h  ring_buffer.h  scanner.cpp  scanner.h  ui.cpp  ui.h  utils.h
tests/: CMakeLists.txt  test_config.cpp  test_player_compile.cpp  test_playlist.cpp  test_ring_buffer.cpp  test_scanner.cpp
